2002-01-03  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	* gnotravex.c: (main), (create_window), (create_space):

2001-12-31  Josh Barrow  <drleary@mac.com>

	* gnotravex.c: (expose_space), (gui_draw_pixmap), (setup_mover),
	(create_space), (create_mover), (load_image), (get_bg_color),
	(make_buffer), (quit_game_cb), (nstr):
	Changed to not use deprecated functions.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnotravex.c: port from GtkClock to GamesClock.

	* Makefile.am: upd.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnotravex.desktop:

	Install into the correct location and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * gnotravex.desktop: Added Portuguese (pt) translation.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnotravex.desktop: Added traditional Chinese translation.

2001-06-16  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c: See you in hell imlib.

2001-06-03  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c (main): Don't try to free the gnome_master_client to
	  silent a gtk warning on exit.

2001-05-28  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c: Made the game area unsensitive when whe are moving
	  parts automaticaly, fix bug #2998.

1999-09-25  Ian Peters  <itp@gnu.org>

	* Makefile.am: Added a missing \, which caused $(INTLLIBS) not to be
	  added to the link line, breaking it on IRIX (I'm told...).  Thanks to
	  David Kaelbling @ SGI.

1999-09-24  Michael Fulbright  <msf@grudge.redhat.com>

	* gnotravex.c: Fixed bug which caused game to infinitely loop
	creating new games when you first run the game.

1999-08-23  Matthias Warkus  <mawa@iname.com>

	* Makefile.am, gnotravex.desktop: finally use our icon.

1999-08-09  Robert Brady  <rwb197@ecs.soton.ac.uk

	* Makefile.am : applied Irix compiling fix from David Kaelbling 
	  <drk@sgi.com> : [bug #1781].

1999-01-26  Miguel de Icaza  <miguel@nuclecu.unam.mx>
